# TerrainGeneration

./: CMakeLists.txt  LICENSE  README.md  copy_assets.cmake  rebuild.sh
assets/shaders/: terrain.frag  terrain.vert  water.frag  water.vert
include/TerrainGeneration/core/: App.hpp
include/TerrainGeneration/graphics/: Camera.hpp  Chunk.hpp  ChunkManager.hpp  Mesh.hpp  Shader.hpp  Terrain.hpp  Vertex.hpp  Water.hpp
include/TerrainGeneration/utilities/: Colors.hpp  Input.hpp  Log.hpp  Random.hpp  UI.hpp
include/glad/: glad.h
src/: main.cpp
src/core/: App.cpp
src/graphics/: Camera.cpp  Chunk.cpp  ChunkManager.cpp  Mesh.cpp  Shader.cpp  Terrain.cpp  Water.cpp
src/utilities/: Log.cpp  UI.cpp
